Archive2/21/c5584521c5ac94/output
main.cpp: In constructor 'B::B(int)':
main.cpp:11:19: error: use of deleted function 'A::~A()'
     B(int x) : A(x) {};
                   ^
main.cpp:6:5: note: declared here
     ~A() = delete;
     ^
